force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <displayFormat>Doc-{00000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>