force-app/main/default/objects/Document__c/fields/Acknowledge_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Status__c</fullName>
    <label>Acknowledge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Query Raised</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>PDD</fullName>
            </value>
            <value>
                <fullName>Waived Off</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
                <isActive>false</isActive>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>OTT</fullName>
                <isActive>false</isActive>
                <label>OTT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>