force-app/main/default/objects/Document__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>