force-app/main/default/objects/Document__c/fields/Document_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Checklist</label>
    <referenceTo>Document_Checklist__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>