force-app/main/default/objects/Document__c/fields/Document_Preview_Url__c.field-meta.xml
<CustomField>
    <fullName>Document_Preview_Url__c</fullName>
    <label>Document Preview Url</label>
    <type>Url</type>
</CustomField>