force-app/main/default/objects/Document__c/fields/Document_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Sub_Type__c</fullName>
    <label>Document Sub Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>