force-app/main/default/objects/Document__c/fields/Other_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Document_Type__c</fullName>
    <label>Other Document Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>