force-app/main/default/objects/Document__c/fields/Parent_Document__c.field-meta.xml
<CustomField>
    <fullName>Parent_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>