force-app/main/default/objects/Document__c/fields/Sanction_Condion_SL__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Condion_SL__c</fullName>
    <formula>&quot;Sanction Condition: &quot; &amp; TEXT(Sanction_Condition_Sl_no__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanction Condion SL</label>
    <type>Text</type>
</CustomField>