force-app/main/default/objects/Document__c/fields/Sanction_Condition_Sl_no__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Condition_Sl_no__c</fullName>
    <label>Sanction Condition Sl no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>