force-app/main/default/objects/Document__c/fields/Specify_Other__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other__c</fullName>
    <label>Specify Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>