force-app/main/default/objects/Document__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Pending</fullName>
            </value>
            <value>
                <fullName>Document Verification</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Login</fullName>
                <isActive>false</isActive>
                <label>Login</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>