force-app/main/default/objects/Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Uploaded</fullName>
                <default>true</default>
                <label>Not Uploaded</label>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Submitted to CPA</fullName>
            </value>
            <value>
                <fullName>CPA Acknowledged</fullName>
            </value>
            <value>
                <fullName>CM Acknowledged</fullName>
            </value>
            <value>
                <fullName>RCU Acknowledged</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Not Received</fullName>
                <isActive>false</isActive>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>OTC</fullName>
                <isActive>false</isActive>
                <label>OTC</label>
            </value>
            <value>
                <fullName>PDD</fullName>
                <isActive>false</isActive>
                <label>PDD</label>
            </value>
            <value>
                <fullName>Query Raised</fullName>
                <isActive>false</isActive>
                <label>Query Raised</label>
            </value>
            <value>
                <fullName>RCU Verified</fullName>
                <isActive>false</isActive>
                <label>RCU Verified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
                <isActive>false</isActive>
                <label>Verified</label>
            </value>
            <value>
                <fullName>Waived Off</fullName>
                <isActive>false</isActive>
                <label>Waived Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>