force-app/main/default/objects/Document__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <formula>CreatedBy.FirstName  + &apos; &apos; + CreatedBy.MiddleName + &apos; &apos; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploaded By</label>
    <type>Text</type>
</CustomField>