force-app/main/default/objects/Document__c/fields/Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uploaded Date</label>
    <type>Date</type>
</CustomField>