force-app/main/default/objects/Document__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Valuation</label>
    <referenceTo>Valuation__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>