force-app/main/default/objects/Document__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>