force-app/main/default/objects/Document__c/validationRules/Is_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  
  AND(
    ISNULL( Parent_Document__c ),
    ISNULL(  Loan_Application__c )), 
Lead__r.IsReadOnly__c, 
 IF(
  AND(NOT(ISNULL(Loan_Application__c)),
      ISNULL( Parent_Document__c )), 
  Loan_Application__r.IsReadOnly__c, 
false))</errorConditionFormula>
    <errorMessage>You don&apos;t have access to edit the application.</errorMessage>
</ValidationRule>